--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: darkorange;
+  background-color: silver;
 }
 
 .wrapper {
@@ -46,7 +46,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: blue;
+  background: green;
   height: 2px;
 }
 
@@ -62,7 +62,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background:blue;
+  background:green;
   height: 2px;
 }
 
@@ -74,7 +74,7 @@ header {
 
 .btn {
   border: none;
-  background-color: blue;
+  background-color: green;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -112,7 +112,7 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed blue;
+  border: 2px dashed green;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
